# Zephyr-iTracker8212-Tracker

./: CMakeLists.txt  README.md  build.sh  prj.conf
src/: bg-96-gprs.c  bg-96-gprs.h  bg-96-gps.c  bg-96-gps.cpp  bg-96-gps.h  bg-96-uart.c  bg-96-uart.h  http_post.c  http_post.h  main.c
